--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ binary_node_tree = "python_examples.binary_node_tree:main"
 python = ">=3.8,<3.11"
 deepspeech = "^0.9.3"
 scipy = "^1.8.0"
+ipykernel = "^6.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = "^22.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
